# sib-plain-nota

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
debian/: changelog  control  rules
include/: Makefile.in
src/: Makefile.am  Makefile.in  main.c
